the_project/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project-dep
  template:
    metadata:
      labels:
        app: the-project-dep
    spec:
      containers:
        - name: the-project-dep
          image: megaeonise/the_project:v3
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
              cpu: "0.2"
