the_project/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project-dep
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
